# crc-llama.cpp

./: .gitignore  CMakePresets.json  OWNERS  build.backend.sh  build.linux.sh  build.remoting.sh  build.sh  build.vulkan.sh  podman_compile.sh  prepare.backend.sh  prepare.linux.sh  prepare.remoting.sh  prepare.vulkan.sh  run.krun.sh  run.linux.sh  run.ramalama.sh  run.remoting.sh  run.vulkan.sh
ggml/: CMakeLists.txt
ggml/include/: ggml-metal.h  ggml-remoting-backend.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cpu/: repack.cpp
ggml/src/ggml-metal/: CMakeLists.txt  ggml-metal-context.m  ggml-metal-device.m  ggml-metal-remoting.cpp  ggml-metal.m
ggml/src/ggml-remotingbackend/: CMakeLists.txt  backend-convert.h  backend-dispatched-backend.cpp  backend-dispatched-buffer-type.cpp  backend-dispatched-buffer.cpp  backend-dispatched-device.cpp  backend-dispatched-metal.cpp  backend-dispatched.cpp  backend-dispatched.h  backend-internal.h  backend-utils.h  backend.cpp  (+1 more)
ggml/src/ggml-remotingfrontend/: CMakeLists.txt  ggml-backend-buffer-type.cpp  ggml-backend-buffer.cpp  ggml-backend-device.cpp  ggml-backend-host-buffer-type.cpp  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-buffer-type.cpp  ggml-host-buffer-type.cpp  ggml-metal-remoting.cpp  ggml-metal-remoting.h  ggml-remoting.h  venus_cs_ggml-rpc-front.cpp  virtgpu-forward-backend.cpp  virtgpu-forward-buffer-type.cpp  virtgpu-forward-buffer.cpp  virtgpu-forward-device.cpp  virtgpu-forward-impl.h  virtgpu-forward-metal.cpp  virtgpu-forward.cpp  virtgpu-forward.h  virtgpu-shm.cpp  virtgpu-shm.h  virtgpu-types.h  virtgpu-utils.cpp  virtgpu-utils.h  virtgpu.cpp  virtgpu.h
src/: llama-context.cpp  llama-kv-cache.cpp  llama-model-loader.cpp  llama-model.cpp  llama-vocab.cpp
tools/run/: run.cpp
(+5 files in other folders)
